--- a/src/app/components/image/image.component.html
+++ b/src/app/components/image/image.component.html
@@ -1,1 +1,10 @@
-<p>image works!</p>
+<div class="container-img">
+   <img 
+      [src]=src 
+      [ngStyle]="{
+         'background': 'transparent', 
+         'width': width, 
+         'height': height
+      }" 
+   >
+</div>
