--- a/src/app/pages/landing-page/landing-page.component.scss
+++ b/src/app/pages/landing-page/landing-page.component.scss
@@ -1,19 +1,26 @@
 header {
+   padding: 2%;
    margin-top: 1%;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   
 }
 .carousel {
    margin-top: 10%;
-   width: 70%;
+   margin-bottom: 5%;
+   width: 100%;
    height: 400px;
-   margin-left: 15%;
-   background: #6f869e;
+   background: url('../../../assets/images/fundo.png');
    display: flex;
    align-items: center;
    justify-content: center;
 }
 .carousel-img {
-   width: 100%;
-   height: 100%;
+   margin-left: 15%;
+   margin-top: 5px;
+   width: 70%;
+   height: 390px;
 }
 
 .arrow-click {
@@ -33,7 +40,16 @@ header {
    transform: scale(1.1);
    filter: brightness(200%);
 }
-
+.button-next {
+   width: 100%;
+   position: fixed;
+   bottom: 0;
+   left: 0;
+   padding: 2%;
+   display: flex;
+   justify-content: flex-end;
+   align-items: center;
+}
 
 @keyframes pulse {
    0% {
