--- a/src/app/pages/good-luck/good-luck.component.scss
+++ b/src/app/pages/good-luck/good-luck.component.scss
@@ -47,3 +47,9 @@ h2 {
       height: 15%;
    }
 }
+
+@media (min-width: 320px) and (max-width: 1024px) {
+   .gl, .container-gl {
+      width: 100%;
+   }
+}
