--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -7,12 +7,14 @@
 </header>
 
 
+<div class="img-landing">
+   <app-image 
+      src='../../../assets/images/landing-page/landing.png'
+      width='100%'
+      height='100%'
+   ></app-image>
+</div>
 
-<app-image 
-   src='../../../assets/images/landing-page/landing.png'
-   width='600px'
-   height='400px'
-></app-image>
 
 <div class="arrow-click">
    <img src='../../../assets/images/landing-page/arrow-down.png' width="100px" height="100px" (click)="scroll()">
