--- a/src/app/pages/landing-page/landing-page.component.scss
+++ b/src/app/pages/landing-page/landing-page.component.scss
@@ -1,3 +1,4 @@
+
 header {
    padding: 2%;
    margin-top: 1%;
@@ -5,6 +6,10 @@ header {
    justify-content: space-between;
    align-items: center;
    
+}
+.img-landing {
+   width: 70%;
+   margin-left: 15%;
 }
 .carousel {
    margin-top: 10%;
@@ -59,5 +64,22 @@ header {
    100% {
       transform: scale(1.1);
       filter: brightness(200%);
+   }
+}
+
+@media (min-width: 320px) and (max-width: 1024px){
+   .carousel-img {
+      width: 100%;
+      height: 200px;
+      margin-left: 0;
+   }
+   .carousel {
+      width: 100%;
+      height: 200px;
+      margin-bottom: 20%;
+   }
+   .img-landing{
+      margin-left: 0;
+      width: 100%;
    }
 }
