--- a/src/app/pages/select-number/select-number.component.html
+++ b/src/app/pages/select-number/select-number.component.html
@@ -10,7 +10,7 @@
 
    <div class="row">
 
-      <div class="form-group col-sm-12 col-md-4 offset-md-2">
+      <div class="form-group col-12 col-md-4 offset-md-2">
          <label for="name">Nome</label>
          <input 
             type="text" 
@@ -23,7 +23,7 @@
          <span class="text-danger" *ngIf="(formSelectNumber.controls.name.value === '' && inputNameHasFocus)">Digite seu nome</span>
       </div>
 
-      <div class="form-group col-sm-12 col-md-4">
+      <div class="form-group col-12 col-md-4">
          <label for="number">Selecione um número</label>
          <select class="form-control" formControlName="number">
             <option 
@@ -37,7 +37,7 @@
 
    
    <div class="row">
-      <div class="form-group col-sm-12 col-md-4 offset-md-4">
+      <div class="form-group col-12 col-md-4 offset-md-4">
          <label for="number">Selecione um presente</label>
          <select class="form-control" (change)="setShowSize($event)" formControlName="gift" (focus)="inputGiftHasFocus = true">
             <option value="" selected disabled>Selecione</option>
@@ -48,7 +48,7 @@
          <span class="text-danger" *ngIf="(formSelectNumber.controls.gift.value === '' && inputGiftHasFocus)">Selecione um presente</span>
       </div>
 
-      <div class="form-group col-sm-12 col-md-4 offset-md-4" *ngIf="showSize">
+      <div class="form-group col-12 col-md-4 offset-md-4" *ngIf="showSize">
          <label for="number">Selecione o tamanho</label>
          <select class="form-control" formControlName="size">
             <option value="" selected disabled>Selecione</option>
@@ -59,9 +59,11 @@
       </div>
    </div>
 
-   <div class="offset-md-5 div-button">
+   <div class="div-button">
       <app-button-confirm text="Registrar" type="submit"></app-button-confirm>
    </div>
 
    
 </form>
+
+<app-loader *ngIf="(!ready || showLoader)"></app-loader>
