--- a/src/app/pages/select-number/select-number.component.scss
+++ b/src/app/pages/select-number/select-number.component.scss
@@ -8,9 +8,13 @@ header {
 }
 form {
    margin-top: 5%;
+   margin-left: 5%;
+   width: 90%;
 }
 .div-button {
    margin-top: 5%;
+   display: flex;
+   justify-content: center;
 }
 label {
    font-size: 1.3rem;
